アプリケーション設定を変更

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ config/secrets.yml
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
+.env
 
 # these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
