--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: rted-server-twin_development
+  database: rails_recipebook_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rted-server-twin_test
+  database: rails_recipebook_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: rted-server-twin_production
-  username: rted-server-twin
-  password: <%= ENV['RTED-SERVER-TWIN_DATABASE_PASSWORD'] %>
+  database: rails_recipebook_production
+  username: rails_recipebook
+  password: <%= ENV['rails_recipebook_DATABASE_PASSWORD'] %>
