設定値の取り扱いを整理

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ config/secrets.yml
 /.bundle
 /vendor/bundle
 .env
+/config/application.yml
 
 # these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
